[gd_scene load_steps=37 format=3 uid="uid://deh4pg0c145ul"]

[ext_resource type="Script" path="res://FlappyBird/flappy_bird_scene.gd" id="1_78h6s"]
[ext_resource type="Script" path="res://FlappyBird/PARALLAX.gd" id="2_jl8a7"]
[ext_resource type="Script" path="res://FlappyBird/FLAPPYBIRDCONTROLLER.gd" id="2_m6gt8"]
[ext_resource type="Texture2D" uid="uid://cewh7iw2fvefg" path="res://FlappyBird/assets/Other_Stuff_Images/PARBACKGRNG.png" id="3_q6643"]
[ext_resource type="Texture2D" uid="uid://bqjw7x5s7jk0s" path="res://FlappyBird/assets/BIRD_SPRITES/0.png" id="5_fnxma"]
[ext_resource type="Texture2D" uid="uid://hfdqq8564gsf" path="res://FlappyBird/assets/BIRD_FLAP_UP/1.png" id="5_no8rc"]
[ext_resource type="Texture2D" uid="uid://casvcx8xn5aj7" path="res://FlappyBird/assets/DEATH_ASSETS/1.png" id="5_pulk3"]
[ext_resource type="Texture2D" uid="uid://dnuy8otv6cgpd" path="res://FlappyBird/assets/DEATH_ASSETS/2.png" id="6_1t4ul"]
[ext_resource type="Texture2D" uid="uid://c12yui5o4vtsb" path="res://FlappyBird/assets/BIRD_SPRITES/1.png" id="6_kkfl7"]
[ext_resource type="Texture2D" uid="uid://umm5nijpgva3" path="res://FlappyBird/assets/BIRD_SPRITES/2.png" id="7_cu3bx"]
[ext_resource type="Script" path="res://FlappyBird/PIPE_GENERATION_TOP.gd" id="9_n4kqx"]
[ext_resource type="Texture2D" uid="uid://ce62kygnvc3pe" path="res://FlappyBird/assets/Other_Stuff_Images/BOTTOMBACKGR.png" id="11_iu3bk"]
[ext_resource type="Texture2D" uid="uid://sswwahwab7oq" path="res://FlappyBird/assets/BUTTONS_AND_UI/PauseButton.png" id="12_otkhg"]
[ext_resource type="Texture2D" uid="uid://cd7xvksvtd7fq" path="res://FlappyBird/assets/BUTTONS_AND_UI/PauseButtonPressed.png" id="13_qa48g"]
[ext_resource type="Texture2D" uid="uid://vkni07jxvcmg" path="res://FlappyBird/assets/BUTTONS_AND_UI/UnPause.png" id="14_5i4gh"]
[ext_resource type="Texture2D" uid="uid://0588akrpa2i7" path="res://FlappyBird/assets/BUTTONS_AND_UI/DifSel.png" id="15_ii17f"]
[ext_resource type="Texture2D" uid="uid://be7tp4a1f1ort" path="res://FlappyBird/assets/Other_Stuff_Images/PipeDOWN.png" id="16_0rj58"]
[ext_resource type="Texture2D" uid="uid://trff4ysngiea" path="res://FlappyBird/assets/Other_Stuff_Images/PipeUP.png" id="17_mcd1l"]
[ext_resource type="AudioStream" uid="uid://dfijvcc2c8gia" path="res://FlappyBird/assets/sound/sfx_point.mp3" id="18_3l0h0"]
[ext_resource type="Texture2D" uid="uid://dcv1ytax3oj2n" path="res://FlappyBird/assets/BUTTONS_AND_UI/ClickToStart.png" id="19_oparp"]
[ext_resource type="Texture2D" uid="uid://dp6ohl4d54ctu" path="res://FlappyBird/assets/Other_Stuff_Images/MenuButton.png" id="20_8c6on"]
[ext_resource type="Texture2D" uid="uid://b0skgii3b34t" path="res://FlappyBird/assets/Medals/Medal_1.png" id="21_eltgp"]
[ext_resource type="Texture2D" uid="uid://ch81h76np0hop" path="res://FlappyBird/assets/Medals/Medal_2.png" id="22_ch2kf"]
[ext_resource type="Texture2D" uid="uid://bsqiea2b52f3e" path="res://FlappyBird/assets/Medals/Medal_3.png" id="23_qio3c"]
[ext_resource type="Texture2D" uid="uid://0pi306xaaux8" path="res://FlappyBird/assets/Medals/Medal_4.png" id="24_xg8ix"]
[ext_resource type="Texture2D" uid="uid://q2exex6fvrwu" path="res://FlappyBird/assets/BUTTONS_AND_UI/RetryButton.png" id="25_hkn8y"]
[ext_resource type="Texture2D" uid="uid://b7wkppkxcr20l" path="res://FlappyBird/assets/BUTTONS_AND_UI/ExitButton.png" id="26_gyw40"]
[ext_resource type="AudioStream" uid="uid://bkox1c0m2jihl" path="res://FlappyBird/assets/sound/sfx_wing.mp3" id="27_tccil"]
[ext_resource type="AudioStream" uid="uid://chopnf24kheio" path="res://FlappyBird/assets/sound/sfx_die.mp3" id="28_1fk3b"]

[sub_resource type="SpriteFrames" id="SpriteFrames_f24o8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_no8rc")
}],
"loop": false,
"name": &"UP",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_pulk3")
}, {
"duration": 1.0,
"texture": ExtResource("6_1t4ul")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_fnxma")
}, {
"duration": 1.0,
"texture": ExtResource("6_kkfl7")
}, {
"duration": 1.0,
"texture": ExtResource("7_cu3bx")
}],
"loop": true,
"name": &"doingnothing",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_s5rba"]
radius = 44.911

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3j431"]
normal = Vector2(0, 1)
distance = -23.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kraqu"]
normal = Vector2(0.000564972, 1)
distance = 1755.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqao5"]
size = Vector2(247.25, 1588)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfijs"]
size = Vector2(241, 1773)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2h8ut"]
size = Vector2(59, 2058.5)

[node name="FlappyBirdScene" type="Node2D"]
script = ExtResource("1_78h6s")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true
script = ExtResource("2_jl8a7")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 2
motion_mirroring = Vector2(8000, 0)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
offset_right = 8000.0
offset_bottom = 1920.0
texture = ExtResource("3_q6643")
stretch_mode = 1

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["bird"]]
script = ExtResource("2_m6gt8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(443, 950)
scale = Vector2(0.734375, 0.734375)
sprite_frames = SubResource("SpriteFrames_f24o8")
animation = &"UP"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(443, 951)
shape = SubResource("CircleShape2D_s5rba")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -7)
shape = SubResource("WorldBoundaryShape2D_3j431")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("WorldBoundaryShape2D_kraqu")

[node name="Bottombackgr" type="Sprite2D" parent="."]
position = Vector2(547, 1953)
scale = Vector2(0.591146, 0.616667)
texture = ExtResource("11_iu3bk")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 19.0
offset_top = 40.0
offset_right = 539.0
offset_bottom = 369.0
texture_normal = ExtResource("12_otkhg")
texture_pressed = ExtResource("13_qa48g")

[node name="PauseScreen" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Unpause" type="TextureButton" parent="PauseScreen"]
layout_mode = 0
offset_left = 300.0
offset_top = 321.0
offset_right = 812.0
offset_bottom = 615.0
texture_normal = ExtResource("14_5i4gh")

[node name="Sprite2D" type="Sprite2D" parent="PauseScreen"]
position = Vector2(578, 892)
texture = ExtResource("15_ii17f")

[node name="EasyButton" type="TextureButton" parent="PauseScreen"]
layout_mode = 0
offset_left = 336.0
offset_top = 807.0
offset_right = 505.0
offset_bottom = 903.0

[node name="MediumButton" type="TextureButton" parent="PauseScreen"]
offset_left = 323.0
offset_top = 905.0
offset_right = 656.0
offset_bottom = 1020.0

[node name="HardButton" type="TextureButton" parent="PauseScreen"]
layout_mode = 0
offset_left = 323.0
offset_top = 1033.0
offset_right = 510.0
offset_bottom = 1129.0

[node name="PIPE_GENERATION_FIRST" type="CharacterBody2D" parent="."]
script = ExtResource("9_n4kqx")

[node name="Thing_that_kills_us" type="Area2D" parent="PIPE_GENERATION_FIRST"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PIPE_GENERATION_FIRST/Thing_that_kills_us"]
position = Vector2(984.625, -794)
shape = SubResource("RectangleShape2D_dqao5")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PIPE_GENERATION_FIRST/Thing_that_kills_us"]
position = Vector2(986.5, 1360.5)
shape = SubResource("RectangleShape2D_vfijs")

[node name="Sprite2D" type="Sprite2D" parent="PIPE_GENERATION_FIRST"]
z_index = -1
position = Vector2(985, -794.75)
scale = Vector2(1.95312, 2.00825)
texture = ExtResource("16_0rj58")

[node name="Sprite2D2" type="Sprite2D" parent="PIPE_GENERATION_FIRST"]
z_index = -1
position = Vector2(986.5, 1269.5)
scale = Vector2(1.86719, 2.0165)
texture = ExtResource("17_mcd1l")

[node name="Thing that counts our points" type="Area2D" parent="PIPE_GENERATION_FIRST"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PIPE_GENERATION_FIRST/Thing that counts our points"]
position = Vector2(1723, 1029)
shape = SubResource("RectangleShape2D_2h8ut")

[node name="ThingThatDings" type="Area2D" parent="PIPE_GENERATION_FIRST"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PIPE_GENERATION_FIRST/ThingThatDings"]
position = Vector2(1159, 1028)
shape = SubResource("RectangleShape2D_2h8ut")

[node name="POINTS" type="Label" parent="."]
offset_top = -2.0
offset_right = 1080.0
offset_bottom = 137.0
horizontal_alignment = 1

[node name="DingDingDings" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_3l0h0")
volume_db = 1.874

[node name="start_btn" type="TextureButton" parent="."]
offset_left = -3.0
offset_top = 2.0
offset_right = 1119.0
offset_bottom = 1943.0
texture_normal = ExtResource("19_oparp")
stretch_mode = 3

[node name="MenuButton" type="Sprite2D" parent="."]
visible = false
position = Vector2(550, 971)
texture = ExtResource("20_8c6on")

[node name="Medal1" type="Sprite2D" parent="MenuButton"]
position = Vector2(117, 34)
texture = ExtResource("21_eltgp")

[node name="Medal2" type="Sprite2D" parent="MenuButton"]
position = Vector2(117, 34)
texture = ExtResource("22_ch2kf")

[node name="Medal3" type="Sprite2D" parent="MenuButton"]
position = Vector2(117, 34)
texture = ExtResource("23_qio3c")

[node name="Medal4" type="Sprite2D" parent="MenuButton"]
position = Vector2(116, 35)
texture = ExtResource("24_xg8ix")

[node name="RETRY" type="TextureButton" parent="MenuButton"]
offset_left = -168.0
offset_top = 155.0
offset_right = 145.0
offset_bottom = 262.0

[node name="RetryButton" type="Sprite2D" parent="MenuButton"]
position = Vector2(-16, 207)
texture = ExtResource("25_hkn8y")

[node name="MENU" type="TextureButton" parent="MenuButton"]
offset_left = -175.0
offset_top = 304.0
offset_right = 144.0
offset_bottom = 417.0

[node name="ExitButton" type="Sprite2D" parent="MenuButton"]
position = Vector2(-16, 360)
texture = ExtResource("26_gyw40")

[node name="FINALPOINTS" type="Label" parent="MenuButton"]
offset_left = -191.0
offset_top = -30.0
offset_right = -87.0
offset_bottom = 74.0

[node name="Flap" type="AudioStreamPlayer" parent="."]
stream = ExtResource("27_tccil")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.315

[node name="DeathAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28_1fk3b")

[connection signal="body_exited" from="Area2D" to="ParallaxBackground" method="_on_area_2d_body_exited"]
[connection signal="body_exited" from="Area2D" to="CharacterBody2D" method="_on_area_2d_body_exited"]
[connection signal="body_exited" from="Area2D" to="PIPE_GENERATION_FIRST" method="_on_area_2d_body_exited"]
[connection signal="pressed" from="TextureButton" to="." method="PAUSEPRESS"]
[connection signal="pressed" from="TextureButton" to="CharacterBody2D" method="_on_texture_button_pressed"]
[connection signal="pressed" from="PauseScreen/Unpause" to="." method="_on_unpause_pressed"]
[connection signal="pressed" from="PauseScreen/EasyButton" to="PIPE_GENERATION_FIRST" method="_on_easy_button_pressed"]
[connection signal="pressed" from="PauseScreen/MediumButton" to="PIPE_GENERATION_FIRST" method="_on_medium_button_pressed"]
[connection signal="pressed" from="PauseScreen/HardButton" to="PIPE_GENERATION_FIRST" method="_on_hard_button_pressed"]
[connection signal="body_entered" from="PIPE_GENERATION_FIRST/Thing_that_kills_us" to="ParallaxBackground" method="_on_thing_that_kills_us_body_entered"]
[connection signal="body_entered" from="PIPE_GENERATION_FIRST/Thing_that_kills_us" to="CharacterBody2D" method="_on_thing_that_kills_us_body_entered"]
[connection signal="body_entered" from="PIPE_GENERATION_FIRST/Thing_that_kills_us" to="PIPE_GENERATION_FIRST" method="_on_thing_that_kills_us_body_entered"]
[connection signal="body_entered" from="PIPE_GENERATION_FIRST/Thing that counts our points" to="PIPE_GENERATION_FIRST" method="_on_thing_that_counts_our_points_body_entered"]
[connection signal="body_entered" from="PIPE_GENERATION_FIRST/ThingThatDings" to="PIPE_GENERATION_FIRST" method="_on_thing_that_dings_body_entered"]
[connection signal="pressed" from="start_btn" to="CharacterBody2D" method="_on_start_btn_pressed"]
[connection signal="pressed" from="start_btn" to="PIPE_GENERATION_FIRST" method="_on_start_btn_pressed"]
[connection signal="pressed" from="MenuButton/RETRY" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="MenuButton/MENU" to="." method="_on_menu_pressed"]
[connection signal="timeout" from="Timer" to="CharacterBody2D" method="_on_timer_timeout"]
